# Database-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  USAGE.md
mongo_llm_cli/: cli.py  confirmation.py  formatter.py  llm_orchestrator.py  mongodb_tool.py  query_translator.py
mongo_llm_cli/mongo_llm_cli/: __init__.py  config.py  executor.py  formatter.py  llm_orchestrator.py  schema_inspector.py
mongo_llm_cli/tests/: mongo_llm_cli_test_queries.txt
tests/: test_cli.py  test_config.py  test_mongodb_tool.py
